--- a/src/components/EventsCard/eventcard.css
+++ b/src/components/EventsCard/eventcard.css
@@ -1,12 +1,5 @@
-.event__cards {
-  padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.event__cards > * {
-  margin-bottom: 2rem;
+.card{
+  flex-basis:48%;
 }
 
 .sub__details {
@@ -52,7 +45,7 @@ p {
 
 .card__footer {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .card__footer img {
@@ -62,4 +55,32 @@ p {
 
 .card-body {
   padding: 0.5rem;
+}
+
+
+/* MEDIA QUERY */
+@media screen and (max-width: 710px){
+  .card__footer{
+    flex-direction:column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 590px){
+  .card{
+    width: 100%;
+    flex-basis:100%;
+  }
+  .card__footer{
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .card__footer{
+    flex-direction:column;
+    align-items: center;
+  }
 }
