--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,11 +1,18 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding:0.1rem 1rem;
 }
 
 .navbar ul {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+}
+
+ul{
+  margin-bottom: 0;
 }
 
 ul li {
@@ -23,6 +30,13 @@ ul .login-btn {
 }
 
 .logo img {
-  height: 58px;
-  width: 75px;
+  height: 25px;
+  width: 50px;
+}
+
+/* media queries */
+@media screen and (max-width: 360px){
+  .navbar{
+    flex-direction: column;
+  }
 }
