--- a/src/components/EventsCard/eventcard.css
+++ b/src/components/EventsCard/eventcard.css
@@ -10,6 +10,36 @@
   font-size:0.8rem;
 }
 
+header{
+  position: relative;
+}
+
+.img-bottom{
+  position: absolute;
+    font-size: 12px;
+    background: #fff;
+    padding: 7px 13px;
+    border-radius: 2px;
+    bottom: 7px;
+    right: 7px;
+    box-shadow: 0 1px 11px 0 rgb(0 0 0 / 11%);
+}
+
+.img-bottom p{color: #121212;}
+
+.img-bottom div{
+  display: flex;
+    align-items: center;
+}
+
+.circle{
+  height: 10px;
+    width: 10px;
+    background: #f28e1c;
+    border-radius: 50%;
+    margin-right:5px;
+}
+
 .sub__details {
   display: flex;
   flex-wrap: wrap;
